<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_headers"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/client_list_header_dark_grey"
    android:baselineAligned="false"
    android:orientation="horizontal">


    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/patient_header"
        style="@style/CustomFontTextViewStyle.ClientList.Medium"
        android:layout_width="@dimen/header_name_layout_width"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAllCaps="true"
        android:textColor="@color/dark_grey_text"
        android:textSize="16sp" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/id_header"
        style="@style/CustomFontTextViewStyle.ClientList.Medium"
        android:layout_width="@dimen/header_id_layout_width"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/header_id_margin_right"
        android:gravity="center_horizontal"
        android:paddingLeft="0dp"
        android:text="@string/id"
        android:textAllCaps="true"
        android:textColor="@color/dark_grey_text"
        android:textSize="16sp" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/dose_header"
        style="@style/CustomFontTextViewStyle.ClientList.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="0dp"
        android:text="@string/dose_d"
        android:textAllCaps="true"
        android:textColor="@color/dark_grey_text"
        android:textSize="16sp" />

</LinearLayout>
